# crateway

./: .gitignore  Cargo.toml  Config.json  README.md  build.rs  setup-ui.sh
.github/workflows/: build.yml  coverage.yml  format.yml
migrations/2022-02-05-102330_create_things/: down.sql  up.sql
mock-addon/: Cargo.toml  build.sh  copy.sh  manifest.json  package.sh
mock-addon/src/: adapter.rs  control_socket.rs  device.rs  main.rs  property.rs
src/: adapter.rs  addon.rs  addon_configuration.rs  addon_instance.rs  addon_manager.rs  addon_socket.rs  api_gateway.rs  config.rs  db.rs  db2.rs  device.rs  jwt.rs  macros.rs  main.rs  model.rs  models.rs  platform.rs  process_manager.rs  rest_api.rs  reverse_proxy.rs  router.rs  schema.rs  tests_common.rs  things_socket.rs  user_config.rs
src/router/: addons_router.rs  extensions_router.rs  login_router.rs  new_things_router.rs  ping_router.rs  settings_router.rs  things_router.rs  users_router.rs
test-utils/: Cargo.toml
test-utils/src/: gateway.rs  lib.rs  mock_thing.rs
tests/: gateway.rs  rest_api.rs
tests/rest_api/: extensions.rs  login.rs  new_things.rs  ping.rs  settings.rs  things.rs  users.rs
