[package]
name = "crateway"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.10"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
actix = "0.12"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
dirs ="3.0.2"
tokio = "1.8.1"
lazy_static = "1.4.0"
rusqlite = "0.25.3"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rust-manifest-types]
git = "https://github.com/WebThingsIO/rust-manifest-types.git"
rev = "f5fc0ed"

[dev-dependencies]
rusty-fork = "0.3.0"
serial_test = "0.4.0"
