[package]
name = "crateway"
version = "3.1.0"
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.10"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
webthings-gateway-ipc-types = "1.0.0-alpha.2"
dirs ="3.0.2"
tokio = "1.8.1"
lazy_static = "1.4.0"
rusqlite = "0.25.3"
futures = "0.3.16"
async-process = "1.1.0"
anyhow = "1.0.42"
tokio-tungstenite = "0.15.0"
futures-util = { version = "0.3.16", features = ["sink"] }
xactor = { version = "0.7.11", features = ["runtime-tokio"], default-features = false }
regex = "1.5.4"
figment = { version = "0.10", features = ["json"] }
tempdir = "0.3.7"
reqwest = "0.11.4"
sha256 = "1.0.2"
tar = "0.4.37"
fs_extra = "1.2.0"
flate2 = "1.0.21"
jsonwebtoken = "7.2.0"
bcrypt = "0.10.1"
chrono = "0.4.19"
openssl = "0.10.36"
hex = "0.4.3"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rust-manifest-types]
git = "https://github.com/WebThingsIO/rust-manifest-types.git"
rev = "f5fc0ed"

[dev-dependencies]
rusty-fork = "0.3.0"
serial_test = "0.4.0"
