[package]
name = "test-utils"
version = "1.0.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
async-process = "1.1.0"
fs_extra = "1.2.0"
futures = "0.3.16"
serde = { version = "1.0.126", features = ["derive"] }
tempdir = "0.3.7"
tokio = "1.8.1"
async-trait = "0.1.52"
strip-ansi-escapes = "0.1.1"
tungstenite = "0.14"
tokio-tungstenite = "0.15.0"
serde_json = "1.0.64"
regex = "1.5.4"
webthings-gateway-ipc-types = "1.0.0-alpha.2"